@@ -38,7 +38,7 @@ Apache Fory™ provides blazingly fast Java object serialization with JIT compil
 ### Drop-in Replacement
 
 - **100% JDK Serialization Compatible**: Supports `writeObject`/`readObject`/`writeReplace`/`readResolve`/`readObjectNoData`/`Externalizable`
-- **Java 8-24 Support**: Works across all modern Java versions including Java 17+ records
+- **Java 8+ Support**: Works across all modern Java versions including Java 17+ records
 - **GraalVM Native Image**: AOT compilation support without reflection configuration
 - **Android API 26+ Support**: Core object serialization works on Android without runtime code generation.
 
@@ -49,6 +49,39 @@ Apache Fory™ provides blazingly fast Java object serialization with JIT compil
 - **Polymorphism**: Full support for inheritance hierarchies and interfaces
 - **Deep Copy**: Efficient deep cloning of complex object graphs with reference preservation
 - **Security**: Class registration and configurable deserialization policies
+
+## Installation
+
+### Maven
+
+```xml
+<dependency>
+  <groupId>org.apache.fory</groupId>
+  <artifactId>fory-core</artifactId>
+  <version>1.1.0</version>
+</dependency>
+```
+
+### Gradle
+
+```kotlin
+implementation("org.apache.fory:fory-core:1.1.0")
+```
+
+### JDK25+
+
+On JDK25+, open `java.lang.invoke` to Fory. Use `ALL-UNNAMED` when Fory is on
+the classpath:
+
+```bash
+--add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+```
+
+Use the Fory core module name when Fory is on the module path:
+
+```bash
+--add-opens=java.base/java.lang.invoke=org.apache.fory.core
+```
 
 ## Quick Start
 
@@ -126,20 +159,20 @@ public class Example {
 
 ## Xlang Mode And Native Mode
 
-Use xlang mode for cross-language payloads and schemas shared with non-Java runtimes. It is the default Java wire mode, and Java examples that use it set `.withXlang(true)` explicitly so the mode choice is visible.
+Use xlang mode for cross-language payloads and schemas shared with non-Java implementations. It is the default Java wire mode, and Java examples that use it set `.withXlang(true)` explicitly so the mode choice is visible.
 
-Use native mode for Java-only traffic. Native mode is selected with `.withXlang(false)`, uses schema-consistent payloads unless compatible mode is enabled, and owns Java-specific object behavior such as JDK serialization hooks, `Externalizable`, dynamic object graphs, object copy, and Java native-mode zero-copy buffers. It is optimized for the JVM type system and supports a broader Java object surface than xlang mode. If you are replacing JDK serialization, Kryo, FST, Hessian, or Java-only Protocol Buffers payloads, start with native mode.
+Use native mode for Java-only traffic. Native mode is selected with `.withXlang(false)` and owns Java-specific object behavior such as JDK serialization hooks, `Externalizable`, dynamic object graphs, object copy, and Java native-mode zero-copy buffers. It is optimized for the JVM type system and supports a broader Java object surface than xlang mode. Compatible mode is enabled by default. Set `.withCompatible(false)` only when every reader and writer uses the same class schema and you want faster serialization and smaller size. If you are replacing JDK serialization, Kryo, FST, Hessian, or Java-only Protocol Buffers payloads, start with native mode.
 
 See [Native Serialization](native-serialization.md) for Java-only serialization details and [Xlang Serialization](xlang-serialization.md) for Java xlang registration and interoperability rules.
 
 ## Thread Safety
 
-Fory provides two thread-safe runtime styles:
+Fory provides two thread-safe Fory instance styles:
 
 ### `buildThreadSafeFory`
 
 This is the default choice. It uses a fixed-size shared `ThreadPoolFory` sized to
-`4 * availableProcessors()` and is the preferred runtime for virtual-thread workloads:
+`4 * availableProcessors()` and is the preferred instance form for virtual-thread workloads:
 
 ```java
 ThreadSafeFory fory = Fory.builder()
@@ -170,7 +203,7 @@ System.out.println(fory.deserialize(bytes));
 Use `buildThreadSafeForyPool(poolSize)` when you want to set that fixed shared pool size
 explicitly. It eagerly creates `poolSize` `Fory` instances, keeps them in shared fixed slots, and
 then lets any caller borrow one through a thread-agnostic fast path. Calls only block when every
-pooled instance is already in use; the runtime does not key cached instances by thread identity:
+pooled instance is already in use; the pool does not key cached instances by thread identity:
 
 ```java
 ThreadSafeFory fory = Fory.builder()
@@ -197,7 +230,7 @@ ThreadSafeFory fory = Fory.builder()
   .withAsyncCompilation(true)
   .buildThreadSafeFory();
 
-// Explicit thread-local runtime
+// Explicit thread-local Fory instance
 ThreadSafeFory threadLocalFory = Fory.builder()
   .withXlang(true)
   .buildThreadLocalFory();
